--- a/gb/22/3/12/n13640836.md
+++ b/gb/22/3/12/n13640836.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cltpzk3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cltpzk3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cltpzk3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南极著名沉船“坚忍号” 时隔百年终被发现</h2>
-<a href="https://d169wr9ny4m3ww.cloudfront.net/M0mz8YgJc"><img width="600" src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/cltpzk3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>英国沙克尔顿爵士的“坚忍号”在沉没一个多世纪后，终于在南极冰层3千米深处被发现。（Falklands Maritime Heritage Trust和National Geographic提供）
+<a href="https://dp0r2i3ixve2v.cloudfront.net/A8pz8YgJd"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6>英国沙克尔顿爵士的“坚忍号”在沉没一个多世纪后，终于在南极冰层3000米深处被发现。（Falklands Maritime Heritage Trust和National Geographic提供）
 </h6>
 <hr>
-	<p>【大纪元2022年03月12日讯】<span style="font-weight: 400;">（大纪元记者张雨霏编译报导）前往<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E5%8D%97%E6%9E%81.md#1">南极</a>搜索<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>的探险家日前宣布，史上最著名的沉船之一——英国<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E6%B2%99%E5%85%8B%E5%B0%94%E9%A1%BF.md#1">沙克尔顿</a>爵士（Ernest Shackleton）的“<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E5%9D%9A%E5%BF%8D%E5%8F%B7.md#1">坚忍号</a>”在沉没一个多世纪后，终于在南极冰层3千米深处被发现。</span></p>
-<p><span style="font-weight: 400;">综合媒体报导，<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E5%9D%9A%E5%BF%8D%E5%8F%B7.md#1">坚忍号</a>（Endurance）现踪地点位于<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E5%A8%81%E5%BE%B7%E5%B0%94%E6%B5%B7.md#1">威德尔海</a>（Weddell Sea）海面下3008米深处，与1915年遭浮冰缓慢挤压的位置相距约6公里。</span></p>
+	<p>【大纪元2022年03月12日讯】<span style="font-weight: 400;">（大纪元记者张雨霏编译报导）前往<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%9E%81.md#1">南极</a>搜索<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>的探险家日前宣布，史上最著名的沉船之一——英国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%99%E5%85%8B%E5%B0%94%E9%A1%BF.md#1">沙克尔顿</a>爵士（Ernest Shackleton）的“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9D%9A%E5%BF%8D%E5%8F%B7.md#1">坚忍号</a>”在沉没一个多世纪后，终于在南极冰层3000米深处被发现。</span></p>
+<p><span style="font-weight: 400;">综合媒体报导，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9D%9A%E5%BF%8D%E5%8F%B7.md#1">坚忍号</a>（Endurance）现踪地点位于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A8%81%E5%BE%B7%E5%B0%94%E6%B5%B7.md#1">威德尔海</a>（Weddell Sea）海面下3008米深处，与1915年遭浮冰缓慢挤压的位置相距约6公里。</span></p>
 <p><span style="font-weight: 400;">这次考察行动是由福克兰海事遗产信托基金（Falklands Maritime Heritage Trust）策划，科学家团队于2月5日搭乘南非破冰船Agulhas II从开普敦出发，希望在南半球夏季结束前找到坚忍号。</span></p>
 <figure id="attachment_13640872" aria-describedby="caption-attachment-13640872" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13640872-Endurance22_EstherHorvath-37-Credit-Esther-Horvath-and-Falklands-Maritime-Heritage-Trust-1200x800.jpg"><img class=" wp-image-13640872" src="https://i.epochtimes.com/assets/uploads/2022/03/id13640872-Endurance22_EstherHorvath-37-Credit-Esther-Horvath-and-Falklands-Maritime-Heritage-Trust-1200x800.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13640872" class="wp-caption-text">（Falklands Maritime Heritage Trust和National Geographic提供）</figcaption></figure>
 <p><span style="font-weight: 400;">科学家团队用一艘破冰船及遥控潜水器协助搜索，经过逾两周的研究，潜水器顺利调查搜索区域，于3月6日成功在深海发现该船只。</span></p>
-<p><span style="font-weight: 400;">“这是迄今为止我看到过的保存状态最理想的木制<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>，它的船身直立，昂然挺立于海床上，基本完好无损。你甚至还能看到船尾的Endurance弧形字样”，考察团勘查工作主任、海洋考古学家曼森?邦德（Mensun Bound）说，“<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E6%B2%99%E5%85%8B%E5%B0%94%E9%A1%BF.md#1">沙克尔顿</a>的航海技术帮助探险队找到了这艘沉船，他的历史记录非常宝贵。”</span></p>
-<figure id="attachment_13640875" aria-describedby="caption-attachment-13640875" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13640875-000_324R4QJ.jpg"><img class=" wp-image-13640875" src="https://i.epochtimes.com/assets/uploads/2022/03/id13640875-000_324R4QJ.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13640875" class="wp-caption-text">考察团队在<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E5%8D%97%E6%9E%81.md#1">南极</a>洲<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E5%A8%81%E5%BE%B7%E5%B0%94%E6%B5%B7.md#1">威德尔海</a>拍摄的照片显示了第一次扫描沉船的画面，左二为曼森?邦德。（Esther HORVATH / Falklands Maritime Heritage Trust / AFP）</figcaption></figure>
+<p><span style="font-weight: 400;">“这是迄今为止我看到过的保存状态最理想的木制<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>，它的船身直立，昂然挺立于海床上，基本完好无损。你甚至还能看到船尾的Endurance弧形字样”，考察团勘查工作主任、海洋考古学家曼森?邦德（Mensun Bound）说，“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%99%E5%85%8B%E5%B0%94%E9%A1%BF.md#1">沙克尔顿</a>的航海技术帮助探险队找到了这艘沉船，他的历史记录非常宝贵。”</span></p>
+<figure id="attachment_13640875" aria-describedby="caption-attachment-13640875" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13640875-000_324R4QJ.jpg"><img class=" wp-image-13640875" src="https://i.epochtimes.com/assets/uploads/2022/03/id13640875-000_324R4QJ.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13640875" class="wp-caption-text">考察团队在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%9E%81.md#1">南极</a>洲<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A8%81%E5%BE%B7%E5%B0%94%E6%B5%B7.md#1">威德尔海</a>拍摄的照片显示了第一次扫描沉船的画面，左二为曼森?邦德。（Esther HORVATH / Falklands Maritime Heritage Trust / AFP）</figcaption></figure>
 <p><span style="font-weight: 400;">邦德还表示，该团队完成世界上最具挑战性的沉船搜索，当中不断与多变的海洋、暴风雪及低温作战，这是极地历史上的一个里程碑。</span></p>
 <p><span style="font-weight: 400;">沉船的图像显示，它的状况非常好，被各种形式的海洋生物所占据，但没有处于严重的腐烂状态。威德尔海的冰冷条件在很大程度上阻止了任何可能破坏木材的生物体的堆积。</span></p>
 <figure id="attachment_13640874" aria-describedby="caption-attachment-13640874" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13640874-END-22_EPK_WRECK-STILL-IMAGES-2-Credit-Falklands-Maritime-Heritage-Trust-and-National-Geographic-Caption-Starboard-bow-1200x675.jpg"><img class=" wp-image-13640874" src="https://i.epochtimes.com/assets/uploads/2022/03/id13640874-END-22_EPK_WRECK-STILL-IMAGES-2-Credit-Falklands-Maritime-Heritage-Trust-and-National-Geographic-Caption-Starboard-bow-1200x675.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-13640874" class="wp-caption-text">（Falklands Maritime Heritage Trust和National Geographic提供）</figcaption></figure>
@@ -21,50 +21,50 @@
 <figure id="attachment_13640871" aria-describedby="caption-attachment-13640871" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13640871-END-22_EPK_WRECK-STILL-IMAGES-1-Credit-Falklands-Maritime-Heritage-Trust-and-National-Geographic.-Caption-Taffrail-and-ships-wheel-aft-well-deck-1200x675.jpg"><img class=" wp-image-13640871" src="https://i.epochtimes.com/assets/uploads/2022/03/id13640871-END-22_EPK_WRECK-STILL-IMAGES-1-Credit-Falklands-Maritime-Heritage-Trust-and-National-Geographic.-Caption-Taffrail-and-ships-wheel-aft-well-deck-1200x675.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-13640871" class="wp-caption-text">（Falklands Maritime Heritage Trust和National Geographic提供）</figcaption></figure>
 <p><span style="font-weight: 400;">1915年1月，这艘木船在南极半岛（Antarctic Peninsula）拉森冰架（Larsen ice shelves）以东陷入浮冰阵中，坚持了整个冬季，之后日益被挤压，10个月后沉没。然而沙克尔顿与他27个同伴在极寒中挣扎了一年半之久，竟靠着徒步与划着小艇，奇迹般地全员生还。</span></p>
 <p><span style="font-weight: 400;">虽然沙克尔顿和他的探险队都失败了，但他们也创造了极地探险史上的传奇。</span></p>
-<p>根据《南极条约》，坚忍号的残骸作为历史遗址和纪念碑受到保护，允许对其进行勘测和拍摄，但水下无人机不可以接触残骸，它将一直留在原地。</p>
-<p><a width="640" b="360" src=""></a><a href="https://d169wr9ny4m3ww.cloudfront.net/M0mz8YgJc"><img width="600" src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/cltpzk3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Jo0nFwvvW4s?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p>根据《南极条约》，坚忍号的残骸作为历史遗址和纪念碑受到保护，允许对其进行勘测和拍摄，但水下无人机不可以接触残骸，它将一直留在原地。◇</p>
+<p><a width="640" b="360" src=""></a><a href="https://dp0r2i3ixve2v.cloudfront.net/A8pz8YgJd"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Jo0nFwvvW4s?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <p><i><span style="font-weight: 400;">（英文大纪元记者</span></i><i><span style="font-weight: 400;">对本文有贡献。</span></i><i><span style="font-weight: 400;">）</span></i></p>
-<p><span style="font-weight: 400;">责任编辑：韩玉</span></p>
+<p><span style="font-weight: 400;">责任编辑：韩玉#</span></p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/20/9/11/n12396114.md#1">沉睡海底80年 二战德军名舰残骸现挪威海域</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/20/9/21/n12419059.md#1">浸水四百年仍完好 荷兰帝国商船现波罗的海</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/21/4/5/n12858289.md#1">沉睡海底近6500米 美军二战驱逐舰现踪</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/21/8/24/n13183629.md#1">西班牙沉船出土一枚金币 价值近10万美元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/11/n12396114.md#1">沉睡海底80年 二战德军名舰残骸现挪威海域</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/21/n12419059.md#1">浸水四百年仍完好 荷兰帝国商船现波罗的海</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/5/n12858289.md#1">沉睡海底近6500米 美军二战驱逐舰现踪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/24/n13183629.md#1">西班牙沉船出土一枚金币 价值近10万美元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">【还原史实】国共内战中被欺骗的美国政府</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398576.md#1" target="_blank">国际人权组织东亚负责人：中共是邪恶的</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13639447.md#1">【拍案惊奇】后院起火 普京或愿与乌总统谈判</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13639936.md#1">【唐瑞讲故事】朗读｜彼得兔的故事（一）</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13635530.md#1">沈舟：俄军遭遇高科技对手 中共傻眼</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13636238.md#1">【一线采访】上海疫情飙升 民众：情况严重</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13634247.md#1">栗战书人大报告惹议 学者：突显中共倒行逆施?</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13633704.md#1">生田斗真为人父 与妻子清野菜名联名报喜</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13637659.md#1">忧众星挺乌克兰？TVB明珠台再度不播奥斯卡</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13633200.md#1">杏鲍菇酱香入味一诀窍 5分钟脆嫩鲜甜上菜</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13633895.md#1">73岁帕金森老人疾病逆转！神韵的神奇健康功效</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13636092.md#1">【健康1+1】内容很吓人？FDA首次公开辉瑞副作用报告</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cltpzk3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cltpzk3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/12/n13640836.htm">南极著名沉船“坚忍号” 时隔百年终被发现</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/12/n13640836.htm">南极著名沉船“坚忍号” 时隔百年终被发现</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cltpzk3307/djy/blob/master/gb/22/3/12/n13640836.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cltpzk3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cltpzk3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cltpzk3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/12/n13640836.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
